# animator_eval

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .testmondata-shm  .testmondata-wal  ARCHITECTURE.md  CALCULATION_COMPENDIUM.md  CHANGELOG.md  CLAUDE.md  DONE.md  Dockerfile  PROJECT.md  README.md  README_SESSION_2026-04-22.md  SESSION_SUMMARY_2026-04-22.md  TODO.md  Taskfile.yml  atlas.hcl  detailed_todo.md  docker-compose.yml  new_todo.md  old_CALCULATION_COMPENDIUM.md  old_CLAUDE.md  old_todo.md  pixi.toml  pyproject.toml  refactor.md  todo.md
TASK_CARDS/: 08_keyframe_parser_expansion.md  09_keyframe_api_replacement.md  17_bangumi_diff_cron.md  P3-B-bangumi-http-client.md  README.md  _card_template.md  _hard_constraints.md
benchmarks/: bench_duckdb.py  bench_hamilton_h1.py  bench_pipeline.py
data/: anilist_checkpoint.json  download_queue.json
docs/: AI_ENTITY_RESOLUTION.md  ARCHITECTURE.md  ARCHITECTURE_5_TIER_PROPOSAL.md  ARCHITECTURE_CLEANUP.md  CALCULATION_COMPENDIUM.md  COMMUNITY_DETECTION_ENHANCEMENTS.md  COVERAGE_REPORT.md  DATA_DICTIONARY.md  ETL_SCHEMA_V55_INTEGRATION.md  EVENT_STUDY_GUIDE.md  EXTERNAL_ID_INTEGRATION.md  GLOSSARY_v3.md  KEYFRAME_DIFF_QUALITY_REPORT.md  MOTHER_DATA_SCHEMA.md  NEO4J_MIGRATION.md  NEO4J_SETUP.md  OLLAMA_QUICKSTART.md  REPORT_DESIGN_v3.md  REPORT_INVENTORY.md  REPORT_PHILOSOPHY.md  REPORT_STRATEGY.md  SCHEMA_VERSIONING_STATUS.md  SCRAPING.md  SETUP_LLM.md  STANCE.md  (+11 more)
rust_ext/: Cargo.toml  pyproject.toml
rust_ext/src/: centrality.rs  collaboration.rs  graph.rs  lib.rs
(+1551 files in other folders)
